--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">Tecfoodv5</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="urlApi">https://www.tecfood.club/74054946816/api/</string>
+    <!--<string name="urlApi">https://www.tecfood.club/74054946816/api/</string> -->
+    <string name="urlApi">http://47.252.5.60:8000/74054946816/api/</string>
 </resources>
